--- a/quiz.html
+++ b/quiz.html
@@ -171,7 +171,7 @@
     }
 
     function redirectToClaim() {
-      window.location.href = 'https://teemytunes.com/top-high-paying-jobs-in-canada-with-100k-visa-sponsorship-for-2024/';
+      window.location.href = 'https://societymagazinesunfaithful.com/s48sq1p8q?key=ab4e65c07fe4e801206caab97399bd4d';
     }
   </script>
 </body>
