--- a/Dashboard.html
+++ b/Dashboard.html
@@ -90,7 +90,7 @@
 </head>
 <body>
     <div class="dashboard">
-        <h1>Welcome to the Dashboard</h1>
+        <h1>play games and earn</h1>
         <div class="menu">
            
             <button onclick="location.href='quiz.html'">
